--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -1,11 +1,6 @@
-#summary One-sentence summary of this page.
+#summary Howto get started with grailsMDA.
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
+= Get started =
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
