--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -2,7 +2,4 @@
 
 = Get started =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+* Download the latest *bold*grailsMDA.jar from http://code.google.com/p/grailsmda/downloads/list
