Edited wiki page through web user interface.

--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -2,4 +2,4 @@
 
 = Get started =
 
-* Download the latest *bold*grailsMDA.jar from http://code.google.com/p/grailsmda/downloads/list
+*Download the latest *grailsMDA.jar* from http://code.google.com/p/grailsmda/downloads/list
