Edited wiki page through web user interface.

--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -6,6 +6,8 @@
 
 2.) Download the latest sample *build.xml* from http://code.google.com/p/grailsmda/downloads/list
 
-3.) Modify the "genpath", "modelpath" and "grailsMDA" properties in the *build.xml* so your model.xmi and the grailsMDA.jar can be found by the ant-run
+3.) Modify the *genpath*, *modelpath* and *grailsMDA* properties in the *build.xml* so your "model".xmi and the *grailsMDA.jar* can be found by the ant-run
 
 4.) Run the "clean-build" task
+
+5.) Look into the folder declared by the *genpath* property, for generated grails domain classes
