--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -2,12 +2,12 @@
 
 = Get started =
 
-1.) Download the latest *grailsMDA.jar* from http://code.google.com/p/grailsmda/downloads/list
+1.) Download the latest version of *grailsMDA.jar* from http://code.google.com/p/grailsmda/downloads/list
 
-2.) Download the latest sample *build.xml* from http://code.google.com/p/grailsmda/downloads/list
+2.) Download the latest version of *build.xml* from http://code.google.com/p/grailsmda/downloads/list
 
-3.) Modify the *genpath*, *modelpath* and *grailsMDA* properties in the *build.xml* so your "model".xmi and the *grailsMDA.jar* can be found by the ant-run
+3.) Modify the *genpath*, *modelpath* and *grailsMDA* properties in the *build.xml*
 
 4.) Run the "clean-build" task
 
-5.) Look into the folder declared by the *genpath* property, for generated grails domain classes
+5.) Look into your *genpath* for generated grails domain classes
