--- a/wiki/InstallGuide.wiki
+++ b/wiki/InstallGuide.wiki
@@ -2,12 +2,12 @@
 
 = Get started =
 
-1.) Download the latest version of *grailsMDA.jar* from http://code.google.com/p/grailsmda/downloads/list
+# Download the latest version of *grailsMDA.jar* from http://code.google.com/p/grailsmda/downloads/list
 
-2.) Download the latest version of *build.xml* from http://code.google.com/p/grailsmda/downloads/list
+# Download the latest version of *build.xml* from http://code.google.com/p/grailsmda/downloads/list
 
-3.) Modify the *genpath*, *modelpath* and *grailsMDA* properties in the *build.xml*
+# Modify the *genpath*, *modelpath* and *grailsMDA* properties in the *build.xml*
 
-4.) Run the "clean-build" task
+# Run the "clean-build" task
 
-5.) Look into your *genpath* for generated grails domain classes
+# Look into your *genpath* for generated grails domain classes
